reorganize into separate gradle test suites